--- a/index.html
+++ b/index.html
@@ -36,17 +36,16 @@
 </body>
 
 <script>
-let count = 6;
+let count = 20;
 
 let numbers_array = Array.from(Array(count).keys());
-let aaa = '';
-let c =0;
 
 $(document).ready(function() {
-  //shuffle(Object.assign([],numbers_array));
+  shuffle(Object.assign([],numbers_array));
   new_numbers();
   $("#btn_sort").on('click', ()=>{
-    sort(numbers_array,0,numbers_array.length-1,"0"); //Object.assign([],numbers_array)
+    bubble(numbers_array);
+    //sort(numbers_array,0,numbers_array.length-1,"0"); //Object.assign([],numbers_array)
   })
 });
 
@@ -72,18 +71,34 @@ function shuffle(n_array){
 }
 
 
+function bubble(n_array){
+  let flag = false;
+  for (let a = 0; a<n_array.length; a++){
+    if (n_array[a] > n_array[a+1] && a+1 < n_array.length) {
+      flag = true;
+      let tmp = n_array[a];
+      n_array[a] = n_array[a+1];
+      change_cell("n"+a, n_array[a+1], a);
+      n_array[a+1] = tmp;
+      change_cell("n"+(a+1), tmp, a);
+    }
+  }
+  if (flag){
+    bubble(n_array);
+  }
+  else{
+    return 0
+  }
+}
+
+
+function change_cell(index, value, delay){
+  $("#"+index).text(value)
+}
+
 
 function sort(n_array, start_point, end_point, branch){
-  alert (start_point + ':' + end_point + "Length "+ n_array.length)
-  if (start_point < end_point){
-    
-    let m = Math.floor((n_array.length) / 2);
-    alert("before rec "+n_array.slice(start_point, m));
-    sort(n_array.slice(start_point, m), 0, m , "left" );
-  }
-  else {
-    alert("out" + n_array);
-  }
+
   //alert("branch: "+branch +"\r\n"+ " <"+ n_array+ ">"+"\r\n" +" start pos: " + (start_point+1) +" end pos: "+ (end_point+1))
 
   // if (start_point < end_point){
