--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
     </tr>
   </table>
 <input id="btn_sort" type="button" class="btn btn-outline-primary" value="Merge sort">
-<br>
-<input id="btn_flag" type="button" class="btn btn-outline-primary" value="Flag">
 
 </div>
 
@@ -49,80 +47,8 @@ $(document).ready(function() {
 
 
 $("#btn_sort").on('click', ()=>{
-  loop_with_delay(numbers_array) ;
-    //bubble(numbers_array);
-    //sort(numbers_array,0,numbers_array.length-1,"0"); //Object.assign([],numbers_array)
+    sort(numbers_array,0,numbers_array.length-1,"0"); //Object.assign([],numbers_array)
   })
-
-
-let a = 0;
-let delay = 100;
-let flag = false;
-
-function loop_with_delay(n_array){
-  setTimeout(function(){
-    if (comparation(a)){
-      flag = true;
-    }
-    a++;
-    if (a < count){
-      loop_with_delay(n_array);
-    }
-    else if (flag) {
-      flag = false;
-      a = 0;
-      loop_with_delay(n_array);
-    }
-    else if (!flag ){
-      alert("End");
-      return;
-    }
-  }, delay)
-  return
-}
-
-function comparation(a){
-  if ($("#"+"n"+a).css("background-color") == "rgb(112, 128, 144)"){
-    $("#"+"n"+a).css("background-color", "transparent");
-  }
-  else {
-    $("#"+"n"+a).css("background-color", "slategrey");
-  }
-  if (numbers_array[a] > numbers_array[a+1] && a+1 < numbers_array.length) {
-    // устанавливаем флаг замены
-    let tmp = numbers_array[a];
-    numbers_array[a] = numbers_array[a+1];
-    change_cell(a, numbers_array[a+1], a);
-    numbers_array[a+1] = tmp;
-    change_cell(a+1, tmp, a);
-    return true;
-  }
-  else {
-    return false;
-  }
-}
-
-
-function bubble(n_array){
-  // fast buble sorting
-  let flag = false;
-  for (let a = 0; a<n_array.length; a++){
-    if (n_array[a] > n_array[a+1] && a+1 < n_array.length) {
-      flag = true;
-      let tmp = n_array[a];
-      n_array[a] = n_array[a+1];
-      change_cell(a, n_array[a+1], a);
-      n_array[a+1] = tmp;
-      change_cell(a+1, tmp, a);
-    }
-  }
-  if (flag){
-    bubble(n_array);
-  }
-  else{
-    return 0
-  }
-}
 
 
 function shuffle(n_array){
@@ -145,31 +71,28 @@ function shuffle(n_array){
   }
 }
 
-function change_cell(index, value, delay){
-  $("#"+"n"+index).text(value)
-}
 
-//function sort(n_array, start_point, end_point, branch){
-  // merge sort 
+function sort(n_array, start_point, end_point, branch){
+  //merge sort 
   
-  //alert("branch: "+branch +"\r\n"+ " <"+ n_array+ ">"+"\r\n" +" start pos: " + (start_point+1) +" end pos: "+ (end_point+1))
+  alert("branch: "+branch +"\r\n"+ " <"+ n_array+ ">"+"\r\n" +" start pos: " + (start_point+1) +" end pos: "+ (end_point+1))
 
-  // if (start_point < end_point){
-  //   let middle = Math.floor((start_point + end_point)/2);
-  //   //alert(x);
-  //   let left_n_arr = Object.assign([],n_array).slice(0, middle);
-  //   sort(left_n_arr , 0, middle, "left" );
-  //   //alert("out")  
-  //   let right_n_arr =Object.assign([],n_array).slice(middle);
-  //   sort(right_n_arr= n_array.slice(middle+1, end_point) , middle+1, end_point, "right" );
+   if (start_point < end_point){
+     let middle = Math.floor((start_point + end_point)/2);
+     //alert(x);
+     let left_n_arr = Object.assign([],n_array).slice(0, middle);
+     sort(left_n_arr , 0, middle, "left" );
+     //alert("out")  
+    let right_n_arr =Object.assign([],n_array).slice(middle);
+     sort(right_n_arr= n_array.slice(middle+1, end_point) , middle+1, end_point, "right" );
     
-  // }
-  // else {
-  //   aaa +=' : '+ n_array[0];
-  //   c++;
-  //   return n_array;
-  // }  
-//}
+   }
+   else {
+     aaa +=' : '+ n_array[0];
+     c++;
+     return n_array;
+   }  
+}
 
 function new_numbers(){
   for (let i = 0; i<count; i++){
