--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ $("#btn_sort").on('click', ()=>{
 let a = 0;
 let delay = 100;
 let flag = false;
+let last_change;
 
 function loop_with_delay(n_array){
   setTimeout(function(){
@@ -67,9 +68,13 @@ function loop_with_delay(n_array){
     else if (flag) {
       flag = false;
       a = 0;
+      count = last_change; // сокращает счетчик соответственно последней позиции
+      // когда была произведена перестановка
+      green_color(2);
       loop_with_delay(n_array);
     }
     else if (!flag ){
+      green_color(1);
       alert("End");
       return;
     }
@@ -91,10 +96,19 @@ function comparation(a){
     change_cell(a, numbers_array[a+1], a);
     numbers_array[a+1] = tmp;
     change_cell(a+1, tmp, a);
+    last_change = a; // сохраняем позицию в массиве, когда была сделана перестановка
     return true;
   }
   else {
     return false;
+  }
+}
+
+function green_color(all){
+  if (all == 1) z = 0;
+  else z = count+1;
+  for (let i = z; i < numbers_array.length; i++){
+    $("#"+"n"+i).css("background-color", "mediumspringgreen");
   }
 }
 
