--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
     <tr id="buffer">
     </tr>
   </table>
-<input id="btn_sort" type="button" class="btn btn-outline-primary" value="Merge sort">
-
-<input id="btn_bubble" type="button" class="btn btn-outline-primary" value="Bubble">
-<br>
-<input id="btn_shaker" type="button" class="btn btn-outline-primary" value="Shaker">
+<input id="btn_sort" type="button" class="btn btn-outline-primary btn-block" value="Merge sort">
+<input id="btn_shaker" type="button" class="btn btn-outline-primary btn-block" value="Shaker">
 </div>
 
 </body>
